home page design started, Navbar and Carousel added

--- a/index.html
+++ b/index.html
@@ -95,21 +95,21 @@
               <div class="hotel_box">
                 <img src="images/hotel1.jpg" alt="hotel select" />
                 <h3 class="hotel_box-text">Hotel 1</h3>
-                <a href="#" class="hotel_box-link"></a>
+                <a href="hotel.html" class="hotel_box-link"></a>
               </div>
             </div>
             <div class="col">
               <div class="hotel_box">
                 <img src="images/hotel2.jpg" alt="hotel select" />
                 <h3 class="hotel_box-text">Hotel 2</h3>
-                <a href="#" class="hotel_box-link"></a>
+                <a href="hotel.html" class="hotel_box-link"></a>
               </div>
             </div>
             <div class="col">
               <div class="hotel_box">
                 <img src="images/hotel3.jpg" alt="hotel select" />
                 <h3 class="hotel_box-text">Hotel 3</h3>
-                <a href="#" class="hotel_box-link"></a>
+                <a href="hotel.html" class="hotel_box-link"></a>
               </div>
             </div>
           </div>
