home page design in progress, gsap sticky text added, testimonial section completed

--- a/hotel.html
+++ b/hotel.html
@@ -30,7 +30,7 @@
     <nav class="nav">
       <ul class="nav_ul">
         <li class="nav_li">
-          <a href="#" class="nav_link">Home</a>
+          <a href="index.html" class="nav_link">Home</a>
         </li>
         <li class="nav_li">
           <a href="#" class="nav_link">Rooms</a>
@@ -55,7 +55,7 @@
       </ul>
     </nav>
     <header class="header">
-      <div class="header_top" style="min-width: 100%">
+      <div class="header_top">
         <div class="owl-carousel owl-theme" id="header_carousel">
           <div class="item">
             <img src="images/header.jpg" alt="" />
@@ -69,10 +69,349 @@
         </div>
         <!-- <img src="images/header.jpg" alt="header image" /> -->
       </div>
-      <div class="header_bottom">header bottom</div>
+      <form class="header_bottom">
+        <div class="container">
+          <div class="row align-items-end">
+            <div class="col-md-3">
+              <div class="select">
+                <span class="select_heading"> check in </span>
+                <span class="select_control">
+                  <input class="select_control-input" type="text" />
+                </span>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="select">
+                <span class="select_heading"> check out </span>
+                <span class="select_control">
+                  <input class="select_control-input" type="text" />
+                </span>
+              </div>
+            </div>
+            <div class="col-md-2">
+              <div class="select">
+                <span class="select_heading"> adults </span>
+                <!-- <select name="adults" id="adults">
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                </select> -->
+                <span class="select_control">
+                  <input class="select_control-input" type="number" min="0" />
+                </span>
+              </div>
+            </div>
+            <div class="col-md-2">
+              <div class="select">
+                <span class="select_heading"> children </span>
+                <!-- <select name="children" id="children">
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                </select> -->
+                <span class="select_control">
+                  <input class="select_control-input" type="number" min="0" />
+                </span>
+              </div>
+            </div>
+            <div class="col-md-2">
+              <div class="select">
+                <input
+                  type="submit"
+                  value="check availability"
+                  class="button_input"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </form>
     </header>
+    <div class="sections">
+      <div class="container sections_container">
+        <span class="sections_container-tooltip"> Our Story </span>
+        <!-- About section starts -->
+        <section class="about section">
+          <div class="row">
+            <div class="col">
+              <h2 class="heading_2">About our Hotel</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <div class="about_content">
+                <div class="about_content-text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Officia exercitationem natus quam nemo. Neque rerum, omnis
+                  sunt doloribus delectus quod, numquam maxime eveniet quidem
+                  ipsam exercitationem recusandae accusamus nam odit.
+                </div>
+                <ul class="about_content-features">
+                  <li>Artfully Curated</li>
+                  <li>Comfortable Rooms</li>
+                  <li>Spacious Rooms</li>
+                </ul>
+              </div>
+            </div>
+            <div class="col">
+              <div class="about_image">
+                <img src="images/HIP_Room-2.jpg" alt="room image" />
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- About section ends -->
+        <!-- Rooms section starts -->
+        <section class="rooms section">
+          <div class="row">
+            <div class="col"><h2 class="heading_2">Rooms</h2></div>
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="rooms_box container_169">
+                <img src="images/HIP_Room-1.jpg" alt="room" />
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="rooms_box container_169">
+                <img src="images/HIP_Room-1.jpg" alt="room" />
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="rooms_box container_169">
+                <img src="images/HIP_Room-1.jpg" alt="room" />
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Rooms section ends -->
+        <!-- Services section starts -->
+        <section class="services section">
+          <div class="row">
+            <div class="col"><h2 class="heading_2">Our Services</h2></div>
+          </div>
+          <div class="row">
+            <div class="col-md-3">
+              <div class="services_box">
+                <div class="services_box-image">
+                  <svg class="svg svg_large services_box-svg">
+                    <use
+                      xlink:href="images/sprite.svg#icon-local_restaurant"
+                    ></use>
+                  </svg>
+                </div>
+                <div class="services_box-text">Restaurant</div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="services_box">
+                <div class="services_box-image">
+                  <svg class="svg svg_large services_box-svg">
+                    <use xlink:href="images/sprite.svg#icon-connection"></use>
+                  </svg>
+                </div>
+                <div class="services_box-text">Free Wifi</div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="services_box">
+                <div class="services_box-image">
+                  <svg class="svg svg_large services_box-svg">
+                    <use xlink:href="images/sprite.svg#icon-groups"></use>
+                  </svg>
+                </div>
+                <div class="services_box-text">Meeting Rooms</div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="services_box">
+                <div class="services_box-image">
+                  <svg class="svg svg_large services_box-svg">
+                    <use
+                      xlink:href="images/sprite.svg#icon-local_laundry_service"
+                    ></use>
+                  </svg>
+                </div>
+                <div class="services_box-text">Laundry</div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Services section ends -->
+      </div>
+    </div>
+    <!-- Nearest attractions section starts -->
+    <section class="nearest section">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h2 class="heading_2">Nearest Attractions</h2>
+          </div>
+        </div>
+      </div>
+      <div class="nearests">
+        <div class="nearest_row">
+          <div class="nearest_col nearest_row-col">
+            <div class="nearest_image">
+              <img src="images/landing1.jpg" alt="nearest location image" />
+            </div>
+          </div>
+          <div class="nearest_col nearest_row-col">
+            <div class="nearest_text">
+              <h3 class="heading_3">Sarangkot</h3>
+              <p>
+                Sarangkot is Ward 18 of Pokhara, Kaski District, Nepal, after it
+                was merged into the city in 2015. It is a popular tourist
+                destination for those who arrive in Pokhara. At the 1991 Nepal
+                census it had a total population of 5,060 with 1,010 individual
+                households. The Ward is located on Sarangkot, a hill on the
+                western side of Pokhara with an altitude of 1600m. Sarangkot is
+                known for panoramic Himalayan views of Dhaulagiri, Annapurna and
+                Manaslu. It also provides an expansive view of the city of
+                Pokhara, from the extreme north to the south including the Phewa
+                Lake. Tourists drive up the hill to watch the sunrise from the
+                view tower at the top. In recent years, Sarangkot has been
+                called one of the best paragliding locations in the world. The
+                hike up from Pokhara Baglung highway at Miruwa to Sarangkot
+                takes 90 minutes to two hours. Sarangkot has one community FM
+                radio station called Radio Sarangkot. It broadcasts at 104.6
+                MHz.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="nearest_row">
+          <div class="nearest_col nearest_row-col">
+            <div class="nearest_image">
+              <img src="images/nearest2.jpg" alt="nearest location image" />
+            </div>
+          </div>
+          <div class="nearest_col nearest_row-col">
+            <div class="nearest_text">
+              <h3 class="heading_3">World Peace Stupa</h3>
+              <p>
+                Pokhara Shanti Stupa is a Buddhist pagoda-style monument on
+                Anadu Hill of the former Pumdi Bhumdi Village Development
+                Committee, in the district of Kaski, Nepal (now a part of the
+                city of Pokhara). Shanti Stupa in Pokhara was built by
+                Nipponzan-Myōhōji monk Morioka Sonin with local supporters under
+                the guidance of Nichidatsu Fujii, a Buddhist monk and the
+                founder of Nipponzan-Myōhōji. Shanti is a Sanskrit word meaning
+                peace, also widely used in the Nepali and Hindi languages, and
+                Shanti Stupa means Peace Pagoda. Shanti Stupa shrine was built
+                as a symbol of peace. Situated at the height of 1100 meters on
+                the Anadu Hill, Nichidatsu Fujii laid the foundation stone along
+                with relics of the Buddha on 12 September 1973. Nepal has two of
+                the eighty peace pagodas in the world: Shanti Stupa in Lumbini,
+                the birthplace of the Buddha and Shanti Stupa in Pokhara. Shanti
+                Stupa in Pokhara has also become a tourist attraction. It
+                provides a panoramic view of the Annapurna range, Pokhara city
+                and Fewa Lake.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="nearest_row">
+        <div class="nearest_col nearest_row-col">
+          <div class="nearest_image">
+            <img src="images/landing2.jpg" alt="nearest location image" />
+          </div>
+        </div>
+        <div class="nearest_col nearest_row-col">
+          <div class="nearest_text">
+            <h3 class="heading_3">Lakeside</h3>
+            <p>
+              Lakeside is a popular tourist destination beside Phewa Tal (lake)
+              in Nepal's second largest city Pokhara. The main areas of Pokhara
+              are broken up into Lakeside, Damside and the old Pokhara. Within
+              Lakeside there's now a north Lakeside and a South Lake side. It's
+              all quite easy to navigate as tourist buses drop most tourists off
+              at the border between Lakeside and Damside. After that it's an
+              easy walk or taxi to the start of south Lakeside and into the
+              ongoing development of north Lakeside. For most people it's just
+              "Lakeside" - which consists of a quiet main road that runs
+              alongside Lake Phewa Tal in Pokhara. Swimming around Lakeside is
+              not recommended. There's a lot of debris in the lake and safety is
+              a strong concern there due to under currents. Not even the local
+              swim around lakeside!
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Nearest attractions section ends -->
+    <div class="sections">
+      <div class="container sections_container">
+        <!-- Testimonial section starts -->
+        <section class="section">
+          <div class="row">
+            <div class="col"><h2 class="heading_2">Testimonials</h2></div>
+          </div>
+          <div class="row">
+            <div class="col-md-6 offset-md-3">
+              <div id="testimonial_carousel" class="owl-carousel">
+                <div class="item">
+                  <div class="testimonial">
+                    <div class="testimonial_image">
+                      <img
+                        src="images/testimonial.jpg"
+                        alt="testimonial image"
+                      />
+                    </div>
+                    <div class="testimonial_text">
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                      Dolorum sint consectetur recusandae ab obcaecati pariatur
+                      voluptates rerum nostrum officiis corrupti? Porro
+                      molestias ipsam sapiente expedita quam, quaerat
+                      necessitatibus ratione dolor.
+                    </div>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="testimonial">
+                    <div class="testimonial_image">
+                      <img
+                        src="images/testimonial.jpg"
+                        alt="testimonial image"
+                      />
+                    </div>
+                    <div class="testimonial_text">
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                      Dolorum sint consectetur recusandae ab obcaecati pariatur
+                      voluptates rerum nostrum officiis corrupti? Porro
+                      molestias ipsam sapiente expedita quam, quaerat
+                      necessitatibus ratione dolor.
+                    </div>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="testimonial">
+                    <div class="testimonial_image">
+                      <img
+                        src="images/testimonial.jpg"
+                        alt="testimonial image"
+                      />
+                    </div>
+                    <div class="testimonial_text">
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                      Dolorum sint consectetur recusandae ab obcaecati pariatur
+                      voluptates rerum nostrum officiis corrupti? Porro
+                      molestias ipsam sapiente expedita quam, quaerat
+                      necessitatibus ratione dolor.
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Testimonial section ends -->
+      </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.2/ScrollTrigger.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
   </body>
