--- a/index.html
+++ b/index.html
@@ -75,16 +75,9 @@
             quisquam, sequi, corporis fugiat?
           </p>
           <div>
-            <p
-              class="text_white"
-              style="
-                text-transform: capitalize;
-                margin-top: 2rem;
-                font-size: 1.2rem;
-                color: #f9a51b;
-              "
-            >
+            <p class="text_white select_dest">
               Please select your destination
+              <span class="select_dest-line"></span>
             </p>
           </div>
         </div>
@@ -117,7 +110,9 @@
       </div>
     </div>
     <!-- Bottom hotel links ends -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
