responsive design initial version completed

--- a/index.html
+++ b/index.html
@@ -24,17 +24,15 @@
     <title>Hotel Diyo</title>
   </head>
   <body class="body_landing">
-    <div class="container px-4">
+    <div class="container">
       <!-- Top navigation bar starts -->
-      <div class="row py-2">
-        <div class="col-md-2">
+      <div class="py-2 top_nav">
+        <div class="">
           <span class="logo_container">
-            <img src="images/logo.jpg" class="logo" alt="logo" />
+            <img src="images/logo1.png" class="logo" alt="logo" />
           </span>
         </div>
-        <div
-          class="col-md-10 ml-auto d-flex justify-content-end align-items-center"
-        >
+        <div class="d-inline-flex">
           <a href="#" class="social social_facebook">
             <svg class="svg svg_white">
               <use xlink:href="images/sprite.svg#icon-facebook2"></use>
@@ -106,6 +104,26 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="row pb-2 justify-content-end">
+        <div class="col">
+          <span class="bottom_contact-span">
+            <span>
+              <svg class="svg svg_white">
+                <use xlink:href="images/sprite.svg#icon-phone"></use>
+              </svg>
+            </span>
+            977 - 9856044471 / 061467179
+          </span>
+          <span class="bottom_contact-span">
+            <span>
+              <svg class="svg svg_white">
+                <use xlink:href="images/sprite.svg#icon-mail"></use>
+              </svg>
+            </span>
+            info@hoteldiyo.com
+          </span>
         </div>
       </div>
     </div>
